# CapStone-AI-Specialist

./: README.md  final_output.json  main.py  pyproject.toml  ragas_eval.py  recuruitment_system_evaluation.csv  recuruitment_system_evaluation.json  requirements.txt  streamlit_app.py
chroma_db/: chroma.sqlite3
data/: jd.txt
data/resumes/: candidate_1.docx  candidate_2.docx  candidate_3.docx
src/: agents.py  config.py  graph.py  ingest.py  main.py  rag.py  schemas.py
